--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-PORTA=5000
+PORTA=5004
 
 MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PORT=3306
-MYSQL_PWD=1234
+MYSQL_USER=admin
+MYSQL_PWD=@dm!n
+
 MYSQL_DB=db_autonomo_api
