--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,7 @@
 MYSQL_HOST=localhost
-MYSQL_USER=admin
-MYSQL_PWD=@dm!n
+MYSQL_USER=root
+MYSQL_PWD=1234
 MYSQL_DB=db_autonomo_api
 
 PORTA=5004
 
-
-TOKEN_JWT=
