--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,8 @@
 PORTA=5004
 
-
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PWD=1234
+MYSQL_HOST=4.172.207.208
+MYSQL_USER=@dm!n
+MYSQL_PWD=@dm!n
 MYSQL_DB=db_autonomo_api
 
 
